[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scene/Resource/Vector.tscn" type="PackedScene" id=1]
[ext_resource path="res://Script/Class/AnimationButtonClass.gd" type="Script" id=2]
[ext_resource path="res://Script/ScriptGridEx/Nodes/Snapped.gd" type="Script" id=3]

[node name="Snapped" type="GraphNode"]
margin_right = 213.0
margin_bottom = 120.0
mouse_filter = 1
title = "Snapped"
show_close = true
resizable = true
slot/0/left_enabled = true
slot/0/left_type = 3
slot/0/left_color = Color( 0.482353, 1, 0.537255, 1 )
slot/0/right_enabled = true
slot/0/right_type = 3
slot/0/right_color = Color( 0.482353, 1, 0.537255, 1 )
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color( 1, 1, 1, 1 )
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color( 1, 1, 1, 1 )
script = ExtResource( 3 )

[node name="Panel" type="PanelContainer" parent="."]
margin_left = 10.0
margin_top = 21.0
margin_right = 203.0
margin_bottom = 113.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Vector" parent="Panel" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 3.0
margin_top = 5.0
margin_right = 190.0
margin_bottom = 85.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Options" type="PanelContainer" parent="."]
margin_left = 10.0
margin_top = 123.0
margin_right = 203.0
margin_bottom = 159.0

[node name="Vbox" type="VBoxContainer" parent="Options"]
margin_left = 3.0
margin_top = 5.0
margin_right = 190.0
margin_bottom = 29.0

[node name="Delete_duplicate" type="CheckBox" parent="Options/Vbox"]
margin_right = 187.0
margin_bottom = 24.0
text = "Delete duplicate"
script = ExtResource( 2 )

[connection signal="connected_from" from="." to="." method="_on_Snapped_connected_from"]
[connection signal="from_value" from="." to="." method="_on_Snapped_from_value"]
[connection signal="pressed" from="Options/Vbox/Delete_duplicate" to="." method="_on_Delete_duplicate_pressed"]
